# cmd/api/middleware.go
@@ -1,0 +1,131 @@
+package main
+
+import (
+	"context"
+	"encoding/base64"
+	"fmt"
+	"net/http"
+	"strconv"
+	"strings"
+
+	"github.com/golang-jwt/jwt/v5"
+	"github.com/ozarabal/goSocial/internal/store"
+)
+
+func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler	{
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request){
+		// read the header
+		authHeader := r.Header.Get("Authorization")
+		if authHeader == "" {
+			app.unauthorizedBasicErrorResponse(w, r, fmt.Errorf("authorization header is missing"))
+			return
+		}
+
+		// parse it
+		parts := strings.Split(authHeader, " ")
+		if len(parts) != 2 || parts[0] != "Bearer"{
+			app.unauthorizedErrorResponse(w, r,fmt.Errorf("authorization header is malformed"))
+		}
+
+		// decode it
+		token := parts[1]
+		jwtToken, err := app.authenticator.ValidateToken(token)
+		if err != nil {
+			app.unauthorizedErrorResponse(w,r,err)
+			return
+		}
+
+		claims, _ := jwtToken.Claims.(jwt.MapClaims)
+
+		userID, err := strconv.ParseInt(fmt.Sprintf("%.f", claims["sub"]), 10,64)
+		if err != nil {
+			app.unauthorizedErrorResponse(w, r, err)
+			return
+		}
+
+		ctx := r.Context()
+		user, err := app.store.Users.GetUserByID(ctx, userID)
+		if err != nil{
+			app.unauthorizedErrorResponse(w,r,err)
+			return
+		}
+
+		ctx = context.WithValue(ctx, userCtx, user)
+		next.ServeHTTP(w, r.WithContext(ctx))
+	})
+}
+
+func (app *application) BasicAuthMiddleware() func(http.Handler) http.Handler{
+	return func(next http.Handler) http.Handler {
+		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+			//read the auth header
+			authHeader := r.Header.Get("Authorization")
+			if authHeader == "" {
+				app.unauthorizedBasicErrorResponse(w, r, fmt.Errorf("authorization header is missing"))
+				return
+			}
+
+			// parse it 
+			parts := strings.Split(authHeader, " ")
+			if len(parts) != 2 || parts[0] != "Basic"{
+				app.unauthorizedBasicErrorResponse(w, r, fmt.Errorf("authorization header is malformed"))
+				return
+			}
+
+			// decode it
+			decode, err := base64.StdEncoding.DecodeString(parts[1])
+			if err != nil{
+				app.unauthorizedBasicErrorResponse(w,r,err)
+				return
+			}
+
+			// check the credentials
+			username := app.config.auth.basic.user
+			pass := app.config.auth.basic.pass
+
+			creds := strings.SplitN(string(decode), ":", 2)
+			if len(creds) != 2 || creds[0] != username || creds[1] != pass{
+				app.unauthorizedBasicErrorResponse(w,r,err)
+				return
+			}
+
+			next.ServeHTTP(w,r)
+		})
+		
+	}
+}
+
+func (app *application) checkPostOwnership(requiredRole string, next http.HandlerFunc) http.HandlerFunc{
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request){
+		
+		// check if it is users post
+		user := getUserFromContext(r)
+		post := getPostFromCtx(r)
+
+		if user.ID == post.ID {
+			next.ServeHTTP(w, r)
+			return
+		}
+
+		// role precedence check
+		allowed, err := app.checkRolePrecedence(r.Context(), user, requiredRole)
+		if err != nil {
+			app.internalServerError(w, r, err)
+			return
+		}
+		if !allowed{
+			app.forbiddenResponse(w, r, err)
+			return
+		}
+		next.ServeHTTP(w, r)
+	})
+}
+
+func (app *application) checkRolePrecedence(ctx context.Context, user *store.User, roleName string) (bool, error){
+	role, err := app.store.Roles.GetByName(ctx, roleName)
+	if err != nil{
+		return false,err
+	}
+
+	return user.Role.Level >= role.Level, nil
+}
